2004-11-09 22:08  Alexander Malmberg <alexander@malmberg.org>

	* Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:):
	Implement NSLineBreakByClipping. Set outside_line_frag and dont_show
	attributes for every glyph.

2004-11-09 18:55  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSPasteboard.m (+_pbs): Give gpbs a --GSStartupNotification
	argument. Listen for the notification and connect immediately if it
	arrives. Clarify the user message. Fixes bug #10876.

2004-11-08  Quentin Mathe <qmathe@club-internet.fr>
        
	* Source/NSButtonCell.m (-setImage:): Added overriden NSCell method in 
	order to have the cell switched to an image cell (with the NSImageOnly
	position) when you call -setImage:. With the previous commit, when the
	cell is a text cell and you call -setImagePosition: after -setImage:,
	the cell image is released.
	
2004-11-07  Quentin Mathe <qmathe@club-internet.fr>
        
	* Source/NSCell.m (-type): Now returns NSNullCellType when the image
	value is nil and the cell type is NSImageCellType, in order to match the
	documented Cocoa behavior.
	* Source/NSButtonCell.m (-setImagePosition:): Finished to commit the
	patch (not fully applied) associated with the revision 1.90, the bug
	#10595 is now corrected.

2004-11-07  Quentin Mathe <qmathe@club-internet.fr>

        * Source/NSWindow.m (-constrainFrameRect:toScreen:): Modified the method
	to match the specification and the constraints used when the user
	moves/resizes the window with the cursor. That makes possible to have
	resizable windows which extends below the bottom of the screen as long
	as you can move them up to take back the resize control on the screen.
	(-setFrame:display:): Modified the method to remove the possibility to
	have the window title bar positioned over the top of the screen when
	using -gui window decorations.

2004-11-06 08:34 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibTemplates.m: Removed nibInstantiate.  This method