@@ -1,3 +1,13 @@
+2004-11-09 22:36  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/GSInfoPanel.m (_value_from_info_plist_for_key): Rename to
+	value_from_info_plist_for_key.
+	(_nil_or_not_of_class): Rename to nil_or_not_of_class.
+	Update callers.
+	(-initWithDictionary:): Fix comment typo.
+	* Source/NSAlert.m: Whitespace cleanups.
+	* Source/NSPrinter.m: Whitespace cleanups.
+
 2004-11-09 22:08  Alexander Malmberg <alexander@malmberg.org>
 
 	* Source/GSHorizontalTypesetter.m (-layoutLineNewParagraph:):
